fix responsiveness of left side on tablet media queries

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -303,7 +303,10 @@ img {
 
     .chats_list {
         height: calc(100% - 66px);
+        
     }
+
+        
 
     .icon {
         display: none;
@@ -327,11 +330,11 @@ img {
     }
 
     .col-md-1 {
-        width: calc((100%/12)*1);
+        width: 83px;
     }
 
     .col-md-11 {
-        width: calc((100%/12)*11);
+        width: calc(100% - 83px);
     }
 
 }
